Prevent wrapping in the middle of progress values in task view
Ensures that e.g. "V: 12345" remains grouped instead of being
wrapped.

--- a/src/moombox/static/moombox.css
+++ b/src/moombox/static/moombox.css
@@ -150,6 +150,9 @@ sl-details::part(content) {
   font-size: var(--sl-button-font-size-medium);
   align-self: center;
 }
+.job-progress-item {
+  white-space: nowrap;
+}
 #video-healthcheck sl-relative-time {
   /* hides trailing whitespace text node */
   display: inline-block;
